# FaceLogin

./: .gitignore  CMakeLists.txt  README.md
include/: FaceRecThread.hpp  FaceRecog.hpp
src/: main.cc
